# python-package-template

./: README.md
python_packaging_template/my_numpy_package/: README.md  pyproject.toml
python_packaging_template/my_numpy_package/my_numpy_package/: module.py
python_packaging_template/my_numpy_package/tests/: test_module.py
